--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "next": "14.1.0",
+    "@tensorflow-models/pose-detection": "^2.1.3"
   },
   "devDependencies": {
     "typescript": "^5",
